@@ -13,10 +13,13 @@ import com.azure.core.amqp.implementation.AzureTokenManagerProvider;
 import com.azure.core.amqp.implementation.ConnectionOptions;
 import com.azure.core.amqp.implementation.ConnectionStringProperties;
 import com.azure.core.amqp.implementation.MessageSerializer;
+import com.azure.core.amqp.implementation.ReactorConnectionCache;
 import com.azure.core.amqp.implementation.ReactorHandlerProvider;
 import com.azure.core.amqp.implementation.ReactorProvider;
 import com.azure.core.amqp.implementation.StringUtil;
 import com.azure.core.amqp.implementation.TokenManagerProvider;
+import com.azure.core.amqp.implementation.handler.ConnectionHandler;
+import com.azure.core.amqp.implementation.handler.WebSocketsConnectionHandler;
 import com.azure.core.amqp.models.CbsAuthorizationType;
 import com.azure.core.annotation.ServiceClientBuilder;
 import com.azure.core.annotation.ServiceClientProtocol;
@@ -47,7 +50,8 @@ import reactor.core.publisher.Flux;
 import reactor.core.scheduler.Scheduler;
 import reactor.core.scheduler.Schedulers;
 
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Locale;
 import java.util.Map;
@@ -56,7 +60,6 @@ import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-import java.util.regex.Pattern;
 
 import static com.azure.messaging.eventhubs.implementation.ClientConstants.AZ_NAMESPACE_VALUE;
 import static com.azure.messaging.eventhubs.implementation.ClientConstants.CONNECTION_ID_KEY;
@@ -200,15 +203,17 @@ import static com.azure.messaging.eventhubs.implementation.ClientConstants.CONNE
  * @see EventHubConsumerAsyncClient
  * @see EventHubConsumerClient
  */
-@ServiceClientBuilder(serviceClients = {EventHubProducerAsyncClient.class, EventHubProducerClient.class,
-    EventHubConsumerAsyncClient.class, EventHubConsumerClient.class}, protocol = ServiceClientProtocol.AMQP)
-public class EventHubClientBuilder implements
-    TokenCredentialTrait<EventHubClientBuilder>,
-    AzureNamedKeyCredentialTrait<EventHubClientBuilder>,
-    ConnectionStringTrait<EventHubClientBuilder>,
-    AzureSasCredentialTrait<EventHubClientBuilder>,
-    AmqpTrait<EventHubClientBuilder>,
-    ConfigurationTrait<EventHubClientBuilder> {
+@ServiceClientBuilder(
+    serviceClients = {
+        EventHubProducerAsyncClient.class,
+        EventHubProducerClient.class,
+        EventHubConsumerAsyncClient.class,
+        EventHubConsumerClient.class },
+    protocol = ServiceClientProtocol.AMQP)
+public class EventHubClientBuilder
+    implements TokenCredentialTrait<EventHubClientBuilder>, AzureNamedKeyCredentialTrait<EventHubClientBuilder>,
+    ConnectionStringTrait<EventHubClientBuilder>, AzureSasCredentialTrait<EventHubClientBuilder>,
+    AmqpTrait<EventHubClientBuilder>, ConfigurationTrait<EventHubClientBuilder> {
 
     // Default number of events to fetch when creating the consumer.
     static final int DEFAULT_PREFETCH_COUNT = 500;
@@ -217,8 +222,8 @@ public class EventHubClientBuilder implements
     // So, limit the prefetch to just 1 by default.
     static final int DEFAULT_PREFETCH_COUNT_FOR_SYNC_CLIENT = 1;
 
-    static final AmqpRetryOptions DEFAULT_RETRY = new AmqpRetryOptions()
-        .setTryTimeout(ClientConstants.OPERATION_TIMEOUT);
+    static final AmqpRetryOptions DEFAULT_RETRY
+        = new AmqpRetryOptions().setTryTimeout(ClientConstants.OPERATION_TIMEOUT);
 
     /**
      * The name of the default consumer group in the Event Hubs service.
@@ -242,7 +247,6 @@ public class EventHubClientBuilder implements
     private static final String UNKNOWN = "UNKNOWN";
 
     private static final String AZURE_EVENT_HUBS_CONNECTION_STRING = "AZURE_EVENT_HUBS_CONNECTION_STRING";
-    private static final Pattern HOST_PORT_PATTERN = Pattern.compile("^[^:]+:\\d+");
 
     private static final ClientLogger LOGGER = new ClientLogger(EventHubClientBuilder.class);
     private final Object connectionLock = new Object();
@@ -256,11 +260,13 @@ public class EventHubClientBuilder implements
     private String fullyQualifiedNamespace;
     private String eventHubName;
     private String consumerGroup;
-    private EventHubConnectionProcessor eventHubConnectionProcessor;
+    private ConnectionCacheWrapper eventHubConnectionProcessor;
     private Integer prefetchCount;
     private ClientOptions clientOptions;
     private SslDomain.VerifyMode verifyMode;
-    private URL customEndpointAddress;
+
+    private URI customEndpointAddress;
+    private ConnectionStringProperties connectionStringProperties;
 
     static {
         final Map<String, String> properties = CoreUtils.getProperties(EVENTHUBS_PROPERTIES_FILE);
@@ -272,6 +278,7 @@ public class EventHubClientBuilder implements
      * Keeps track of the open clients that were created from this builder when there is a shared connection.
      */
     private final AtomicInteger openClients = new AtomicInteger();
+    private final V2StackSupport v2StackSupport = new V2StackSupport(LOGGER);
 
     /**
      * Creates a new instance with the default transport {@link AmqpTransportType#AMQP} and a non-shared connection. A
@@ -280,6 +287,43 @@ public class EventHubClientBuilder implements
      */
     public EventHubClientBuilder() {
         transport = AmqpTransportType.AMQP;
+    }
+
+    /**
+     * Creates a TokenCredential from the {@link ConnectionStringProperties}.
+     *
+     * @param properties Connection string components to create TokenCredential from.
+     *
+     * @return A {@link TokenCredential} represented by the connection string properties.
+     */
+    private TokenCredential getTokenCredential(ConnectionStringProperties properties) {
+        TokenCredential tokenCredential;
+        if (properties.getSharedAccessSignature() == null) {
+            tokenCredential = new EventHubSharedKeyCredential(properties.getSharedAccessKeyName(),
+                properties.getSharedAccessKey(), ClientConstants.TOKEN_VALIDITY);
+        } else {
+            tokenCredential = new EventHubSharedKeyCredential(properties.getSharedAccessSignature());
+        }
+        return tokenCredential;
+    }
+
+    /**
+     * Sets the client options.
+     *
+     * @param clientOptions The client options.
+     * @return The updated {@link EventHubClientBuilder} object.
+     */
+    @Override
+    public EventHubClientBuilder clientOptions(ClientOptions clientOptions) {
+        this.clientOptions = clientOptions;
+        return this;
+    }
+
+    /***
+     * Gets the client options.
+     */
+    ClientOptions getClientOptions() {
+        return clientOptions;
     }
 
     /**
@@ -309,43 +353,20 @@ public class EventHubClientBuilder implements
      */
     @Override
     public EventHubClientBuilder connectionString(String connectionString) {
-        final ConnectionStringProperties properties = new ConnectionStringProperties(connectionString);
+        this.connectionStringProperties = new ConnectionStringProperties(connectionString);
 
-        this.fullyQualifiedNamespace = Objects.requireNonNull(properties.getEndpoint().getHost(),
+        this.fullyQualifiedNamespace = Objects.requireNonNull(connectionStringProperties.getEndpoint().getHost(),
             "'fullyQualifiedNamespace' cannot be null.");
-        this.credentials = getTokenCredential(properties);
+        this.credentials = getTokenCredential(connectionStringProperties);
 
         if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
             throw LOGGER.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
         }
 
-        if (!CoreUtils.isNullOrEmpty(properties.getEntityPath())) {
-            this.eventHubName = properties.getEntityPath();
+        if (!CoreUtils.isNullOrEmpty(connectionStringProperties.getEntityPath())) {
+            this.eventHubName = connectionStringProperties.getEntityPath();
         }
 
-        return this;
-    }
-
-    private TokenCredential getTokenCredential(ConnectionStringProperties properties) {
-        TokenCredential tokenCredential;
-        if (properties.getSharedAccessSignature() == null) {
-            tokenCredential = new EventHubSharedKeyCredential(properties.getSharedAccessKeyName(),
-                properties.getSharedAccessKey(), ClientConstants.TOKEN_VALIDITY);
-        } else {
-            tokenCredential = new EventHubSharedKeyCredential(properties.getSharedAccessSignature());
-        }
-        return tokenCredential;
-    }
-
-    /**
-     * Sets the client options.
-     *
-     * @param clientOptions The client options.
-     * @return The updated {@link EventHubClientBuilder} object.
-     */
-    @Override
-    public EventHubClientBuilder clientOptions(ClientOptions clientOptions) {
-        this.clientOptions = clientOptions;
         return this;
     }
 
@@ -370,33 +391,33 @@ public class EventHubClientBuilder implements
         Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
         if (connectionString.isEmpty()) {
-            throw LOGGER.logExceptionAsError(new IllegalArgumentException(
-                "'connectionString' cannot be an empty string."));
+            throw LOGGER
+                .logExceptionAsError(new IllegalArgumentException("'connectionString' cannot be an empty string."));
         } else if (eventHubName.isEmpty()) {
             throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
         }
 
-        final ConnectionStringProperties properties = new ConnectionStringProperties(connectionString);
-        TokenCredential tokenCredential = getTokenCredential(properties);
+        this.connectionStringProperties = new ConnectionStringProperties(connectionString);
+        TokenCredential tokenCredential = getTokenCredential(connectionStringProperties);
 
-        if (!CoreUtils.isNullOrEmpty(properties.getEntityPath())
-            && !eventHubName.equals(properties.getEntityPath())) {
+        if (!CoreUtils.isNullOrEmpty(connectionStringProperties.getEntityPath())
+            && !eventHubName.equals(connectionStringProperties.getEntityPath())) {
             throw LOGGER.logExceptionAsError(new IllegalArgumentException(String.format(Locale.US,
                 "'connectionString' contains an Event Hub name [%s] and it does not match the given "
                     + "'eventHubName' parameter [%s]. Please use the credentials(String connectionString) overload. "
                     + "Or supply a 'connectionString' without 'EntityPath' in it.",
-                properties.getEntityPath(), eventHubName)));
+                connectionStringProperties.getEntityPath(), eventHubName)));
         }
 
-        return credential(properties.getEndpoint().getHost(), eventHubName, tokenCredential);
+        return credential(connectionStringProperties.getEndpoint().getHost(), eventHubName, tokenCredential);
     }
 
     /**
      * Sets the configuration store that is used during construction of the service client.
-     *
+     * <p>
      * If not specified, the default configuration store is used to configure the {@link EventHubAsyncClient}. Use
      * {@link Configuration#NONE} to bypass using configuration settings during construction.
-     *
+     * </p>
      * @param configuration The configuration store used to configure the {@link EventHubAsyncClient}.
      *
      * @return The updated {@link EventHubClientBuilder} object.
@@ -405,6 +426,13 @@ public class EventHubClientBuilder implements
     public EventHubClientBuilder configuration(Configuration configuration) {
         this.configuration = configuration;
         return this;
+    }
+
+    /**
+     * Gets the configuration to use.
+     */
+    Configuration getConfiguration() {
+        return configuration;
     }
 
     /**
@@ -426,13 +454,20 @@ public class EventHubClientBuilder implements
         }
 
         try {
-            this.customEndpointAddress = new URL(customEndpointAddress);
-        } catch (MalformedURLException e) {
-            throw LOGGER.logExceptionAsError(
-                new IllegalArgumentException(customEndpointAddress + " : is not a valid URL.", e));
+            this.customEndpointAddress = new URI(customEndpointAddress);
+        } catch (URISyntaxException e) {
+            throw LOGGER
+                .logExceptionAsError(new IllegalArgumentException(customEndpointAddress + " : is not a valid URL.", e));
         }
 
         return this;
+    }
+
+    /**
+     * Gets the custom endpoint address.
+     */
+    URI getCustomEndpointAddress() {
+        return this.customEndpointAddress;
     }
 
     /**
@@ -446,8 +481,8 @@ public class EventHubClientBuilder implements
      * @throws NullPointerException if {@code fullyQualifiedNamespace} is null.
      */
     public EventHubClientBuilder fullyQualifiedNamespace(String fullyQualifiedNamespace) {
-        this.fullyQualifiedNamespace = Objects.requireNonNull(fullyQualifiedNamespace,
-            "'fullyQualifiedNamespace' cannot be null.");
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
         if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
             throw LOGGER.logExceptionAsError(
                 new IllegalArgumentException("'fullyQualifiedNamespace' cannot be an empty string."));
@@ -455,11 +490,10 @@ public class EventHubClientBuilder implements
         return this;
     }
 
-    private String getAndValidateFullyQualifiedNamespace() {
-        if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
-            throw LOGGER.logExceptionAsError(
-                new IllegalArgumentException("'fullyQualifiedNamespace' cannot be an empty string."));
-        }
+    /**
+     * Gets the fully qualified namespace.
+     */
+    String getFullyQualifiedNamespace() {
         return fullyQualifiedNamespace;
     }
 
@@ -467,7 +501,7 @@ public class EventHubClientBuilder implements
      * Sets the name of the Event Hub to connect the client to.
      *
      * @param eventHubName The name of the Event Hub to connect the client to.
-
+    
      * @return The updated {@link EventHubClientBuilder} object.
      * @throws IllegalArgumentException if {@code eventHubName} is an empty string.
      * @throws NullPointerException if {@code eventHubName} is null.
@@ -479,6 +513,13 @@ public class EventHubClientBuilder implements
             throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
         }
         return this;
+    }
+
+    /**
+     * Gets the Event Hub name.
+     */
+    String getEventHubName() {
+        return eventHubName;
     }
 
     /**
@@ -509,8 +550,8 @@ public class EventHubClientBuilder implements
      */
     public EventHubClientBuilder credential(String fullyQualifiedNamespace, String eventHubName,
         TokenCredential credential) {
-        this.fullyQualifiedNamespace = Objects.requireNonNull(fullyQualifiedNamespace,
-            "'fullyQualifiedNamespace' cannot be null.");
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
         this.credentials = Objects.requireNonNull(credential, "'credential' cannot be null.");
         this.eventHubName = Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
@@ -557,10 +598,10 @@ public class EventHubClientBuilder implements
      *     null.
      */
     public EventHubClientBuilder credential(String fullyQualifiedNamespace, String eventHubName,
-                                            AzureNamedKeyCredential credential) {
+        AzureNamedKeyCredential credential) {
 
-        this.fullyQualifiedNamespace = Objects.requireNonNull(fullyQualifiedNamespace,
-            "'fullyQualifiedNamespace' cannot be null.");
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
         this.eventHubName = Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
         if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
@@ -611,10 +652,10 @@ public class EventHubClientBuilder implements
      *     null.
      */
     public EventHubClientBuilder credential(String fullyQualifiedNamespace, String eventHubName,
-                                            AzureSasCredential credential) {
+        AzureSasCredential credential) {
 
-        this.fullyQualifiedNamespace = Objects.requireNonNull(fullyQualifiedNamespace,
-            "'fullyQualifiedNamespace' cannot be null.");
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
         this.eventHubName = Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
         if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
@@ -647,6 +688,13 @@ public class EventHubClientBuilder implements
     }
 
     /**
+     * Gets the credentials.
+     */
+    TokenCredential getCredentials() {
+        return credentials;
+    }
+
+    /**
      * Sets the proxy configuration to use for {@link EventHubAsyncClient}. When a proxy is configured, {@link
      * AmqpTransportType#AMQP_WEB_SOCKETS} must be used for the transport type.
      *
@@ -661,6 +709,13 @@ public class EventHubClientBuilder implements
     }
 
     /**
+     * Gets proxy options.
+     */
+    ProxyOptions getProxyOptions() {
+        return proxyOptions;
+    }
+
+    /**
      * Sets the transport type by which all the communication with Azure Event Hubs occurs. Default value is {@link
      * AmqpTransportType#AMQP}.
      *
@@ -672,6 +727,15 @@ public class EventHubClientBuilder implements
     public EventHubClientBuilder transportType(AmqpTransportType transport) {
         this.transport = transport;
         return this;
+    }
+
+    /**
+     * Gets the transport type.
+     *
+     * @return The transport type.
+     */
+    AmqpTransportType getTransportType() {
+        return transport;
     }
 
     /**
@@ -702,6 +766,13 @@ public class EventHubClientBuilder implements
     }
 
     /**
+     * Gets the retry options.
+     */
+    AmqpRetryOptions getRetryOptions() {
+        return retryOptions;
+    }
+
+    /**
      * Sets the name of the consumer group this consumer is associated with. Events are read in the context of this
      * group. The name of the consumer group that is created by default is {@link #DEFAULT_CONSUMER_GROUP_NAME
      * "$Default"}.
@@ -718,10 +789,17 @@ public class EventHubClientBuilder implements
     }
 
     /**
-     * Sets the count used by the receiver to control the number of events the Event Hub consumer will actively receive
+     * Gets the consumer group.
+     */
+    String getConsumerGroup() {
+        return consumerGroup;
+    }
+
+    /**
+     * Sets the count used by the receiver to control the number of events per partition the Event Hub consumer will actively receive
      * and queue locally without regard to whether a receive operation is currently active.
      *
-     * @param prefetchCount The amount of events to queue locally.
+     * @param prefetchCount The amount of events per partition to queue locally. Defaults to 500 events per partition.
      *
      * @return The updated {@link EventHubClientBuilder} object.
      * @throws IllegalArgumentException if {@code prefetchCount} is less than {@link #MINIMUM_PREFETCH_COUNT 1} or
@@ -743,7 +821,7 @@ public class EventHubClientBuilder implements
     }
 
     /**
-     * Package-private method that gets the prefetch count.
+     * Gets the prefetch count.
      *
      * @return Gets the prefetch count or {@code null} if it has not been set.
      * @see #DEFAULT_PREFETCH_COUNT for default prefetch count.
@@ -753,7 +831,28 @@ public class EventHubClientBuilder implements
     }
 
     /**
-     * Package-private method that sets the scheduler for the created Event Hub client.
+     * Gets the connection string properties.
+     *
+     * @return the connection string properties.
+     */
+    ConnectionStringProperties getConnectionStringProperties() {
+        return connectionStringProperties;
+    }
+
+    /**
+     * Sets the connection string properties.
+     *
+     * @param connectionStringProperties the connection string properties to set.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     */
+    EventHubClientBuilder setConnectionStringProperties(ConnectionStringProperties connectionStringProperties) {
+        this.connectionStringProperties = connectionStringProperties;
+        return this;
+    }
+
+    /**
+     * Sets the scheduler for the created Event Hub client.
      *
      * @param scheduler Scheduler to set.
      *
@@ -765,7 +864,16 @@ public class EventHubClientBuilder implements
     }
 
     /**
-     * Package-private method that sets the verify mode for this connection.
+     * Gets the scheduler used to subscribe Event Hub operations on.
+     *
+     * @return The scheduler.
+     */
+    Scheduler getScheduler() {
+        return this.scheduler;
+    }
+
+    /**
+     * Sets the verify mode for this connection.
      *
      * @param verifyMode The verification mode.
      * @return The updated {@link EventHubClientBuilder} object.
@@ -773,6 +881,13 @@ public class EventHubClientBuilder implements
     EventHubClientBuilder verifyMode(SslDomain.VerifyMode verifyMode) {
         this.verifyMode = verifyMode;
         return this;
+    }
+
+    /**
+     * Gets the verify mode.
+     */
+    SslDomain.VerifyMode getVerifyMode() {
+        return verifyMode;
     }
 
     /**
@@ -873,16 +988,22 @@ public class EventHubClientBuilder implements
             prefetchCount = DEFAULT_PREFETCH_COUNT;
         }
 
-        final Meter meter = MeterProvider.getDefaultProvider().createMeter(LIBRARY_NAME, LIBRARY_VERSION,
-            clientOptions == null ? null : clientOptions.getMetricsOptions());
-
+        final Meter meter = createMeter();
         final MessageSerializer messageSerializer = new EventHubMessageSerializer();
 
-        final EventHubConnectionProcessor processor;
+        final ConnectionCacheWrapper processor;
         if (isSharedConnection.get()) {
             synchronized (connectionLock) {
                 if (eventHubConnectionProcessor == null) {
-                    eventHubConnectionProcessor = buildConnectionProcessor(messageSerializer, meter);
+                    if (v2StackSupport.isV2StackEnabled(configuration)) {
+                        final boolean useSessionChannelCache
+                            = v2StackSupport.isSessionChannelCacheEnabled(configuration);
+                        eventHubConnectionProcessor = new ConnectionCacheWrapper(
+                            buildConnectionCache(messageSerializer, meter, useSessionChannelCache));
+                    } else {
+                        eventHubConnectionProcessor
+                            = new ConnectionCacheWrapper(buildConnectionProcessor(messageSerializer, meter));
+                    }
                 }
             }
 
@@ -891,19 +1012,27 @@ public class EventHubClientBuilder implements
             final int numberOfOpenClients = openClients.incrementAndGet();
             LOGGER.info("# of open clients with shared connection: {}", numberOfOpenClients);
         } else {
-            processor = buildConnectionProcessor(messageSerializer, meter);
+            if (v2StackSupport.isV2StackEnabled(configuration)) {
+                final boolean useSessionChannelCache = v2StackSupport.isSessionChannelCacheEnabled(configuration);
+                processor = new ConnectionCacheWrapper(
+                    buildConnectionCache(messageSerializer, meter, useSessionChannelCache));
+            } else {
+                processor = new ConnectionCacheWrapper(buildConnectionProcessor(messageSerializer, meter));
+            }
         }
 
         String identifier;
         if (clientOptions instanceof AmqpClientOptions) {
             String clientOptionIdentifier = ((AmqpClientOptions) clientOptions).getIdentifier();
-            identifier = CoreUtils.isNullOrEmpty(clientOptionIdentifier) ? UUID.randomUUID().toString() : clientOptionIdentifier;
+            identifier = CoreUtils.isNullOrEmpty(clientOptionIdentifier)
+                ? UUID.randomUUID().toString()
+                : clientOptionIdentifier;
         } else {
             identifier = UUID.randomUUID().toString();
         }
 
-        return new EventHubAsyncClient(processor, messageSerializer, scheduler,
-            isSharedConnection.get(), this::onClientClose, identifier, meter, createTracer());
+        return new EventHubAsyncClient(processor, messageSerializer, scheduler, isSharedConnection.get(),
+            this::onClientClose, identifier, meter, createTracer());
     }
 
     /**
@@ -964,15 +1093,23 @@ public class EventHubClientBuilder implements
     }
 
     Tracer createTracer() {
-        return TracerProvider.getDefaultProvider().createTracer(LIBRARY_NAME, LIBRARY_VERSION,
-            AZ_NAMESPACE_VALUE, clientOptions == null ? null : clientOptions.getTracingOptions());
+        return TracerProvider.getDefaultProvider()
+            .createTracer(LIBRARY_NAME, LIBRARY_VERSION, AZ_NAMESPACE_VALUE,
+                clientOptions == null ? null : clientOptions.getTracingOptions());
+    }
+
+    Meter createMeter() {
+        return MeterProvider.getDefaultProvider()
+            .createMeter(LIBRARY_NAME, LIBRARY_VERSION,
+                clientOptions == null ? null : clientOptions.getMetricsOptions());
     }
 
     private EventHubConnectionProcessor buildConnectionProcessor(MessageSerializer messageSerializer, Meter meter) {
         final ConnectionOptions connectionOptions = getConnectionOptions();
         final Supplier<String> getEventHubName = () -> {
             if (CoreUtils.isNullOrEmpty(eventHubName)) {
-                throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+                throw LOGGER
+                    .logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
             }
             return eventHubName;
         };
@@ -989,20 +1126,18 @@ public class EventHubClientBuilder implements
                 }
 
                 final String connectionId = StringUtil.getRandomString("MF");
-                LOGGER.atInfo()
-                    .addKeyValue(CONNECTION_ID_KEY, connectionId)
-                    .log("Emitting a single connection.");
+                LOGGER.atInfo().addKeyValue(CONNECTION_ID_KEY, connectionId).log("Emitting a single connection.");
 
-                final TokenManagerProvider tokenManagerProvider = new AzureTokenManagerProvider(
-                    connectionOptions.getAuthorizationType(), connectionOptions.getFullyQualifiedNamespace(),
-                    connectionOptions.getAuthorizationScope());
+                final TokenManagerProvider tokenManagerProvider
+                    = new AzureTokenManagerProvider(connectionOptions.getAuthorizationType(),
+                        connectionOptions.getFullyQualifiedNamespace(), connectionOptions.getAuthorizationScope());
                 final ReactorProvider provider = new ReactorProvider();
                 final ReactorHandlerProvider handlerProvider = new ReactorHandlerProvider(provider, meter);
                 final AmqpLinkProvider linkProvider = new AmqpLinkProvider();
 
-                final EventHubAmqpConnection connection = new EventHubReactorAmqpConnection(connectionId,
-                    connectionOptions, getEventHubName.get(), provider, handlerProvider, linkProvider, tokenManagerProvider,
-                    messageSerializer);
+                final EventHubAmqpConnection connection
+                    = new EventHubReactorAmqpConnection(connectionId, connectionOptions, getEventHubName.get(),
+                        provider, handlerProvider, linkProvider, tokenManagerProvider, messageSerializer, false, false);
 
                 sink.next(connection);
             });
@@ -1012,10 +1147,23 @@ public class EventHubClientBuilder implements
             connectionOptions.getFullyQualifiedNamespace(), getEventHubName.get(), connectionOptions.getRetry()));
     }
 
-    private ConnectionOptions getConnectionOptions() {
-        Configuration buildConfiguration = configuration == null
-                ? Configuration.getGlobalConfiguration().clone()
-                : configuration;
+    private ReactorConnectionCache<EventHubReactorAmqpConnection>
+        buildConnectionCache(MessageSerializer messageSerializer, Meter meter, boolean useSessionChannelCache) {
+        final ConnectionOptions connectionOptions = getConnectionOptions();
+        final Supplier<String> getEventHubName = () -> {
+            if (CoreUtils.isNullOrEmpty(eventHubName)) {
+                throw LOGGER
+                    .logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+            }
+            return eventHubName;
+        };
+        return v2StackSupport.createConnectionCache(connectionOptions, getEventHubName, messageSerializer, meter,
+            useSessionChannelCache);
+    }
+
+    ConnectionOptions getConnectionOptions() {
+        Configuration buildConfiguration
+            = configuration == null ? Configuration.getGlobalConfiguration().clone() : configuration;
 
         if (credentials == null) {
             final String connectionString = buildConfiguration.get(AZURE_EVENT_HUBS_CONNECTION_STRING);
@@ -1036,32 +1184,73 @@ public class EventHubClientBuilder implements
 
         // If the proxy has been configured by the user but they have overridden the TransportType with something that
         // is not AMQP_WEB_SOCKETS.
-        if (proxyOptions != null && proxyOptions.isProxyAddressConfigured()
+        if (proxyOptions != null
+            && proxyOptions.isProxyAddressConfigured()
             && transport != AmqpTransportType.AMQP_WEB_SOCKETS) {
-            throw LOGGER.logExceptionAsError(new IllegalArgumentException(
-                "Cannot use a proxy when TransportType is not AMQP Web Sockets. "
+            throw LOGGER.logExceptionAsError(
+                new IllegalArgumentException("Cannot use a proxy when TransportType is not AMQP Web Sockets. "
                     + "Use the setter 'transportType(AmqpTransportType.AMQP_WEB_SOCKETS)' to enable Web Sockets mode."));
+        }
+
+        if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
+            throw LOGGER.logExceptionAsError(
+                new IllegalArgumentException("'fullyQualifiedNamespace' cannot be an empty string."));
         }
 
         final CbsAuthorizationType authorizationType = credentials instanceof EventHubSharedKeyCredential
             ? CbsAuthorizationType.SHARED_ACCESS_SIGNATURE
             : CbsAuthorizationType.JSON_WEB_TOKEN;
 
-        final SslDomain.VerifyMode verificationMode = verifyMode != null
-            ? verifyMode
-            : SslDomain.VerifyMode.VERIFY_PEER_NAME;
+        SslDomain.VerifyMode verificationMode = verifyMode != null ? verifyMode : SslDomain.VerifyMode.VERIFY_PEER_NAME;
+
+        final boolean usingDevelopmentEmulator
+            = connectionStringProperties != null && connectionStringProperties.useDevelopmentEmulator();
+
+        if (usingDevelopmentEmulator) {
+            verificationMode = SslDomain.VerifyMode.ANONYMOUS_PEER;
+        }
 
         final ClientOptions options = clientOptions != null ? clientOptions : new ClientOptions();
 
-        if (customEndpointAddress == null) {
-            return new ConnectionOptions(getAndValidateFullyQualifiedNamespace(), credentials, authorizationType,
-                ClientConstants.AZURE_ACTIVE_DIRECTORY_SCOPE, transport, retryOptions, proxyOptions, scheduler,
-                options, verificationMode, LIBRARY_NAME, LIBRARY_VERSION);
+        final String hostname;
+        final int port;
+
+        if (customEndpointAddress != null) {
+            hostname = customEndpointAddress.getHost();
+            port = customEndpointAddress.getPort();
+        } else if (connectionStringProperties != null) {
+            final URI endpoint = connectionStringProperties.getEndpoint();
+            hostname = endpoint.getHost();
+            port = endpoint.getPort();
         } else {
-            return new ConnectionOptions(getAndValidateFullyQualifiedNamespace(), credentials, authorizationType,
-                ClientConstants.AZURE_ACTIVE_DIRECTORY_SCOPE, transport, retryOptions, proxyOptions, scheduler,
-                options, verificationMode, LIBRARY_NAME, LIBRARY_VERSION, customEndpointAddress.getHost(),
-                customEndpointAddress.getPort());
+            hostname = fullyQualifiedNamespace;
+            port = -1;
+        }
+
+        // No explicit port was listed, so choose a default port.
+        final int portToUse = port != -1 ? port : getPort(transport, usingDevelopmentEmulator);
+        final boolean enableSsl = !usingDevelopmentEmulator;
+
+        return new ConnectionOptions(fullyQualifiedNamespace, credentials, authorizationType,
+            ClientConstants.AZURE_ACTIVE_DIRECTORY_SCOPE, transport, retryOptions, proxyOptions, scheduler, options,
+            verificationMode, LIBRARY_NAME, LIBRARY_VERSION, hostname, portToUse, enableSsl);
+    }
+
+    private static int getPort(AmqpTransportType transport, boolean useDevelopmentEmulator) {
+        if (useDevelopmentEmulator) {
+            return ConnectionHandler.AMQP_PORT;
+        }
+
+        switch (transport) {
+            case AMQP:
+                return ConnectionHandler.AMQPS_PORT;
+
+            case AMQP_WEB_SOCKETS:
+                return WebSocketsConnectionHandler.HTTPS_PORT;
+
+            default:
+                throw LOGGER
+                    .logThrowableAsError(new IllegalArgumentException("Transport Type is not supported: " + transport));
         }
     }
 }
